styling all table

--- a/alphabet.html
+++ b/alphabet.html
@@ -23,13 +23,18 @@
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
             <h2>Buchstabier-Alphabet</h2>
             <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
-            <table id="spellingAlphabet">
-                <tr>
-                    <th>Buchstabe</th>
-                    <th>Deutsch</th>
-                    <th>International</th>
-                </tr>
-            </table>
+            <div class="w-50">
+                <table>
+                    <thead>    
+                        <tr>
+                            <th>Buchstabe</th>
+                            <th>Deutsch</th>
+                            <th>International</th>
+                        </tr>
+                    </thead>
+                    <tbody id="spellingAlphabet"></tbody>    
+                </table>
+            </div>    
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
