--- a/cb-bandplan11m.html
+++ b/cb-bandplan11m.html
@@ -24,14 +24,17 @@
             <h2>
                 CB-Funk Frequenzen
             </h2>
-            <div class="w-100 d-flex justify-center">
-                <table id="cbChannelList">
-                    <tr>
-                        <th>CB-Kanal</th>
-                        <th>MHZ</th>
-                        <th>Modulationsart</th>
-                        <th>Verwendung</th>
-                    </tr>
+            <div class="w-50 d-flex justify-center">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>CB-Kanal</th>
+                            <th>MHZ</th>
+                            <th>Modulationsart</th>
+                            <th>Verwendung</th>
+                        </tr>
+                    </thead>
+                    <tbody id="cbChannelList"></tbody>    
                 </table>
             </div>
         </div>  
