--- a/cb-mikrofon-belegung.html
+++ b/cb-mikrofon-belegung.html
@@ -23,22 +23,25 @@
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
             <h2>Mikrofonbelegung CB-Funkeräte</h2>
             <img class="microphone-assignment margin-top-30px margin-bottom-30px txt-center" src="./assets/img/mike-stecker.gif" alt="">
-            <table  style="overflow-x:auto" class="mobile-table" id="microphoneAssignment">
-                <thead>
-                    <tr>
-                        <th>Gerätetyp</th>
-                        <th>Steckertyp</th>
-                        <th>Pin 1</th>
-                        <th>Pin 2</th>
-                        <th>Pin 3</th>
-                        <th>Pin 4</th>
-                        <th>Pin 5</th>
-                        <th>Pin 6</th>
-                        <th>Pin 7</th>
-                        <th>Pin 8</th>
-                    </tr>
-                </thead>    
-            </table>
+            <div class="w-50">
+                <table class="mobile-table">
+                    <thead>
+                        <tr>
+                            <th>Gerätetyp</th>
+                            <th>Steckertyp</th>
+                            <th>Pin 1</th>
+                            <th>Pin 2</th>
+                            <th>Pin 3</th>
+                            <th>Pin 4</th>
+                            <th>Pin 5</th>
+                            <th>Pin 6</th>
+                            <th>Pin 7</th>
+                            <th>Pin 8</th>
+                        </tr>
+                    </thead>
+                    <tbody id="microphoneAssignment"></tbody>    
+                </table>
+            </div>    
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
