--- a/cb-swr.html
+++ b/cb-swr.html
@@ -28,17 +28,24 @@
                 </p>
             </div>
 
-            <div>
+            <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
+                <img src="./assets/img/kodax-02.gif" alt="">
+            </div>
+
+            <div class="w-50">
                 <p>
                     <strong>
                         Zusammenhang zwischen SWR und Verlust
                     </strong>    
                 </p>
-                <table class="table" id="swr">
-                    <tr>
-                        <th>SWR</th>
-                        <th>Verlust in %</th>
-                    </tr>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>SWR</th>
+                            <th>Verlust in %</th>
+                        </tr>
+                    </thead>
+                    <tbody id="swr"></tbody>    
                 </table>
             </div>
 
@@ -48,35 +55,47 @@
                 </p>
             </div>
 
-            <div>
+            <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
+                <img src="./assets/img/kodax-02.gif" alt="">
+            </div>
+
+            <div class="w-50">
                 <p>
                     <strong>
                         RG58C/U
                     </strong>    
                 </p>
-                <table class="table" id="rg58c">
-                    <tr>
-                        <th>Länge in m</th>
-                        <th>Dämpfung in db</th>
-                        <th>Verminderung Sendeleistung</th>
-                        <th>Verminderung der Sendeleistung</th>
-                    </tr>
+                <table class="table mobile-table">
+                    <thead>    
+                        <tr>
+                            <th>Länge in m</th>
+                            <th>Dämpfung in db</th>
+                            <th>Verminderung Sendeleistung</th>
+                            <th>Verminderung der Sendeleistung</th>
+                        </tr>
+                    </thead>
+                    <tbody  id="rg58c"></tbody>    
                 </table>
             </div>
-
-            <div>
+            <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
+                <img src="./assets/img/kodax-02.gif" alt="">
+            </div>
+            <div class="w-50">
                 <p>
                     <strong>
                         RG213
                     </strong>    
                 </p>
-                <table class="table" id="rg213">
-                    <tr>
-                        <th>Länge in m</th>
-                        <th>Dämpfung in db</th>
-                        <th>Verminderung Sendeleistung</th>
-                        <th>Verminderung der Sendeleistung</th>
-                    </tr>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Länge in m</th>
+                            <th>Dämpfung in db</th>
+                            <th>Verminderung Sendeleistung</th>
+                            <th>Verminderung der Sendeleistung</th>
+                        </tr>
+                    </thead>
+                    <tbody id="rg213"></tbody>    
                 </table>
             </div>
 
