--- a/ct-frequenzen.html
+++ b/ct-frequenzen.html
@@ -24,13 +24,19 @@
             <h2>CharlyTango Frequenzen<br> 
                 von damals und heute</h2>
             <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
-            <table id="frequenzList">
-                <tr>
-                    <th>Frequenz</th>
-                    <th>Band</th>
-                    <th>Land</th>
-                </tr>
-            </table>
+            <div class="w-50">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Frequenz</th>
+                            <th>Band</th>
+                            <th>Land</th>
+                        </tr>
+                    </thead>
+                    <tbody id="frequenzList"></tbody>    
+                </table>
+                
+            </div>        
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
