--- a/gw-interface.html
+++ b/gw-interface.html
@@ -19,39 +19,36 @@
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--Content-->
 
-    <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
+    <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px">
         <h2>Das PTT Modem ist ganz einfach aufgebaut</h2>
         <img class="circuit-diagram" src="./assets/img/ptt_ser.gif" alt="">
-        <div >
+        <div class="w-50">
             <p class="margin-top-30px">
                 <strong>
                     Bauteile: 1 Widerstand 2,2k Ohm oder 10k Ohm 1 Diode 1N4148 Transistor BC 547 oder Vergleich.
                 </strong>
             </p>  
             <p>
-                <strong>
-                    Die Schaltung ist in ein RS232 Gehäuse (9polig) frei verdrahtet eingebaut. Beim RS232 Stecker liegt die<br> 
-                    PTT (RTS) auf pin 7 und die Masse auf pin 5. Aufbau und Belegung der Schaltung siehe Plan oben.<br> 
-                    Die PTT und Masse wird nun auf die Mikrofon Buchse auf die entsprechenden pins gelegt<br> 
-                    (siehe die Mikrofon Buchsen Belegung Deines Funkgerätes). Nun wird der Soundkarten Ausgang<br> 
-                    (Lautsprecher) zum Mikrofon Eingang am Funkgerät gelegt. Jetzt kann man die Daten die über<br> 
-                    das Netzwerk kommen für andere Funker übertragen. Um das Empfangs Signal von Deinem CB Gerät<br> 
-                    in das Internet zu übertragen musst Du folgende Leitung herstellen: am Lautsprecherausgang<br> 
-                    Deines CB Gerätes (3,5 Klinken Mono) anschließen und dann mit dem Line In oder Mikro Eingang<br> 
-                    Deiner Soundkarte verbinden (3,5 Klinken Stereo). Sollte es nicht auf Anhieb funktionieren<br> 
-                    dann tausche einfach die Stereo Kanäle am 3,5 klinken Stecker, dann sollte es gehen.<br> 
-                    So nun ist es geschafft sollte man Denken ist aber leider nicht ganz so einfach,<br> 
-                    denn nun muss man noch mit eQSO der Soundkarte und dem CB Gerät alles so abgleichen<br> 
-                    das das Gateway sauber arbeitet.<br> 
-                </strong>
+                Die Schaltung ist in ein RS232 Gehäuse (9polig) frei verdrahtet eingebaut. Beim RS232 Stecker liegt die 
+                PTT (RTS) auf pin 7 und die Masse auf pin 5. Aufbau und Belegung der Schaltung siehe Plan oben. 
+                Die PTT und Masse wird nun auf die Mikrofon Buchse auf die entsprechenden pins gelegt 
+                (siehe die Mikrofon Buchsen Belegung Deines Funkgerätes). Nun wird der Soundkarten Ausgang 
+                (Lautsprecher) zum Mikrofon Eingang am Funkgerät gelegt. Jetzt kann man die Daten die über 
+                das Netzwerk kommen für andere Funker übertragen. Um das Empfangs Signal von Deinem CB Gerät 
+                in das Internet zu übertragen musst Du folgende Leitung herstellen: am Lautsprecherausgang 
+                Deines CB Gerätes (3,5 Klinken Mono) anschließen und dann mit dem Line In oder Mikro Eingang 
+                Deiner Soundkarte verbinden (3,5 Klinken Stereo). Sollte es nicht auf Anhieb funktionieren 
+                dann tausche einfach die Stereo Kanäle am 3,5 klinken Stecker, dann sollte es gehen. 
+                So nun ist es geschafft sollte man Denken ist aber leider nicht ganz so einfach, 
+                denn nun muss man noch mit eQSO der Soundkarte und dem CB Gerät alles so abgleichen 
+                das das Gateway sauber arbeitet.
             </p>
-            <p>
-                <strong>    
-                    Da dies aber bei jedem  PC und Funkgerät anders ist muss man hier selber testen wie die Einstellungen am besten sind.<br> 
-                    Es empfiehlt sich das ganze im Papagei Raum zu machen oder mit einem Partner in einem anderen Raum.<br>
-                    Die Schaltung wird hoffentlich ein wenig helfen können.<br> 
-                    Diese Schaltung kann man natürlich auch für PMR / LPD oder Freenet benutzen.
-                </strong>
+            <p>    
+                Da dies aber bei jedem  PC und Funkgerät anders ist muss man hier selber testen wie die Einstellungen am besten sind. 
+                Es empfiehlt sich das ganze im Papagei Raum zu machen oder mit einem Partner in einem anderen Raum.
+                Die Schaltung wird hoffentlich ein wenig helfen können. 
+                Diese Schaltung kann man natürlich auch für PMR / LPD oder Freenet benutzen.
+                
             </p>
         </div>            
     </div>  
