--- a/pr-auf-cb.html
+++ b/pr-auf-cb.html
@@ -20,158 +20,160 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Paket Radio auf CB-Funk</h2>
-            <p>
-                Über Funk kann man von einem Computer aus gebührenfrei Daten mit anderen CB-Funkern austauschen.
-            </p>
-            <p>
-                Die CB-Kanäle 6, 7, 24, 25, 52, 53, 76, 77 sind für die Datenfunk freigegeben.<br>
-                Datenfunk auf diesen Kanälen darf betrieben werden in den Betriebsarten F1D, F2D und G2D<br> 
-                (Frequenz- und Phasenmodulation, FSK bzw. AFSK).<br>
-                Es dürfen jedoch nur Geräte verwendet werden, die für den Anschluss beliebiger Zusatzmikrofone zugelassen sind.
-            </p>
-            <p>
-                Im Amateurfunk hat die digitale Datenübertragung schon vor einigen Jahren eine technische Revolution ausgelöst.<br>
-                Packet-Radio wurde 1981 in Tucson Arizona erstmals vorgestellt. Eine Gruppe von Funkamateuren hatte ein Verfahren<br> 
-                entwickelt, mit dem man auf einfache Art Daten per Funk übertragen kann.<br>
-                Es wurden Verfahren und Geräte entwickelt, die speziell für die Funk-Datenübertragung geeignet sind und mit sehr<br> 
-                geringem Aufwand an jedes Funkgerät angeschlossen werden können. Es hat sich gezeigt, dass das international weit<br> 
-                verbreitete Packet-Radio für diese Zwecke optimal eingesetzt werden kann.
-            </p>
-            <p>
-                Im CB-Funk hat sich Packet-Radio mit 1200 Baud als optimal erwiesen , das entspricht ca. 150 Zeichen pro Sekunde.<br> 
-                Es gibt inzwischen viele Stationen, die über Packet-Radio erreichbar sind. Außerdem kann man in vielen Digipeatern<br> 
-                und Mailboxen interessante Nachrichten auslesen und auch Nachrichten an andere Funkfreunde speichern.
-            </p>
-            <p>
-                Sicherlich, mit Computer und Packet-Radio zu arbeiten ist nicht so einfach, wie nur die Sprechtaste eines Mikrofons<br> 
-                zu drücken.<br>
-                Wollen Sie wissen, was man mit Packet-Radio alles machen kann?<br>
-                Dann probieren Sie einmal Packet-Radio aus! Sie werden sehen, dass die Möglichkeiten fast unerschöpflich sind.
-            </p>
-            <p>
-                Wenn Sie weitere Fragen haben, dann stehen wir gerne zu Ihrer Verfügung. Sollten Sie sich für Packet-Radio-Controller<br> 
-                oder Modems interessieren, dann schauen Sie doch mal in unseren Shop um. Hier finden Sie auch ein komplettes<br> 
-                Zubehörprogramm. 
-            </p>
-            <p>
-                <strong>
-                    Was ist Packet-Radio?
-                </strong>
-            </p>
-            <p>
-                Packet-Radio ist ein Verfahren, mit dem man über Funk Daten senden und empfangen kann. Die Daten werden meist über<br> 
-                einen Computer eingegeben, der Packet-Radio-Controller erzeugt daraus Töne, die per Funk übertragen werden können.<br> 
-                Der Packet-Radio-Controller der Gegenstation empfängt diese Töne und wandelt sie wieder in computerlesbare Daten um.<br> 
-                Die Daten werden dabei nicht kontinuierlich gesendet, sondern zu Paketen zusammengefasst, daher der Name Packet-Radio.
-            </p>
-            <p>
-                <strong>
-                    Viele Stationen arbeiten auf dem selben Kanal
-                </strong>
-            </p>
-            <p>
-                Mit jedem Datenpaket wird (ausser den eigentlichen Nutzdaten) noch das Rufzeichen des Absenders und des Empfängers<br> 
-                übertragen. Dadurch ist es möglich, dass mehrere Packet-Radio Verbindungen auf derselben Frequenz stattfinden ohne sich<br> 
-                zu stören: Jeder Empfänger sucht sich aus der Vielzahl der mitgehörten Pakete nur diejenigen heraus, die für ihn bestimmt<br> 
-                sind. Jeder Sender prüft, bevor er sendet, ob die Frequenz frei ist. Dadurch werden Kollisionen vermieden und die Frequenz<br> 
-                kann für viele Benutzer gleichzeitig genutzt werden.
-            </p>
-            <p>
-                <strong>
-                    Übertragungsfehler ausgeschlossen
-                </strong>
-            </p>
-            <p>
-                In den Datenpaketen sind Prüfsummen enthalten, die es ermöglichen, Übertragungsfehler zu erkennen.<br> 
-                Nur 100% fehlerfreie Pakete werden vom Empfänger akzeptiert und auf dem Bildschirm angezeigt.<br> 
-                Richtig empfangene Pakete werden bestätigt. Unbestätigte Pakete werden so lange wiederholt, bis sie<br> 
-                fehlerfrei beim Empfänger angekommen sind.
-            </p>
-            <p>
-                <strong>
-                    Große Reichweite durch Digipeater
-                </strong>
-            </p>
-            <p>
-                Der Packet-Radio-Verkehr kann direkt zwischen zwei Funkpartnern stattfinden. Zusätzlich können die Datenpakete<br> 
-                jedoch auch über mehrere Zwischenstationen ("Digipeater") weitergereicht werden, was die Reichweite erheblich vergrößert.<br> 
-                Beim klassischen 'digipeating' kann ein Datenpaket über bis zu 7 Zwischenstationen weitergereicht werden bis es beim<br> 
-                Empfänger ankommt.
-            </p>
-            <p>
-                <strong>
-                    Das Packet-Radio-Netz
-                </strong>
-            </p>
-            <p>
-                Was im Amateurfunk schon lange gebräuchlich ist wird nun Schritt für Schritt auch im CB-Funk verwirklicht:<br>  
-                Die Packet-Radio-Knoten (Digipeater) werden vernetzt, durch intelligente Netzwerksoftware baut sich automatisch<br>  
-                ein leistungsfähiges Datennetz auf, das von Jedermann benutzt werden kann.
-            </p>
-            <p>
-                <strong>
-                    Verbreiteter Standard
-                </strong>
-            </p>
-            <p>
-                Packet-Radio wird seit fast 20 Jahren im Amateurfunk weltweit verwendet und hat sich tausendfach bewährt.
-            </p>
-            <p>
-                <strong>
-                    Einfacher Anschluss
-                </strong>
-            </p>
-            <p>
-                Der Anschluss eines Packet-Controllers an das CB-Funkgerät erfolgt ohne Eingriff in das Gerät über die Mikrofon- und Lautsprecherbuchse.<br> 
-                Nur 4 Leitungen sind nötig: Masse, Mikrofon, Lautsprecher und Sprechtaste.
-            </p>
-            <p>
-                <strong>
-                    Packet-Radio Modulation
-                </strong>
-            </p>
-            <p>
-                Für FM-Funkgeräte ist die <strong>AFSK-Modulation</strong> (Audio Frequency Shift Keying) gebräuchlich. Ein NF-Ton wird in der Frequenz<br> 
-                umgetastet und mit einem normalen FM-Funkgerät übertragen. Man verwendet die Bell 202 Norm mit den Tonfrequenzen<br> 
-                1200 und 2200 Hz. Vorteil: einfachster Anschluss an der Mikrofon- und Lautsprecherbuchse. Fast jedes FM-CB-Funkgerät<br> 
-                ist geeignet, es sind keine Eingriffe ins Funkgerät notwendig. Es genügt, wenn man sich ein passendes Verbindungskabel<br> 
-                zwischen dem Mikrofonanschluss des Funkgeräts und dem Packet-Radio-Controller anfertigt, das mit den Signalen <strong>Mikrofon,<br> 
-                Lautsprecher, PTT, Masse</strong> belegt ist. 
-            </p>
-            <h2>Was braucht man für Packet-Radio</h2>
-            <p>
-                <strong>
-                    Funkgerät
-                </strong>
-            </p>
-            <p>
-                Für den 1200 Baud Betrieb eignet sich fast jedes FM-CB-Funkgerät. Der Packet-Radio-Controller wird an die<br> 
-                Mikrofon- und Lautsprecherbuchse angeschlossen. Geräte, bei denen das Mikrophon fest angeschlossen ist,<br>  
-                oder bei denen ein eingebautes Mikrofon verwendet wird (Handfunkgeräte ohne Anschluss für externe Mikrofone)<br>  
-                sind nicht zulässig. 
-            </p>
-            <p>
-                <strong>
-                    Coumputer
-                </strong>
-            </p>
-            <p>
-                Packet-Radio-Modems können mit jedem Computer betrieben werden, der eine serielle Schnittstelle (RS232, V24) besitzt.<br> 
-                Ideal sin IBM-kompatible (PC, AT, 386, 486 etc.), Laptops, Notebooks etc.. Genau so gut lässt sich ein Atari-ST<br> 
-                oder Amiga anschließen. Für alle diese Rechner sind Terminalprogramme verfügbar, mit denen man sehr komfortabel<br> 
-                Daten senden und empfangen kann.
-            </p>
-            <p>
-                <strong>
-                    Packet-Radio-Controller
-                </strong>
-            </p>
-            <p>
-                Der Packet-Radio-Controller kontrolliert den korrekten Aufbau der Datenpakete und analysiert die empfangenen Pakete.<br> 
-                Er wird über die serielle Schnittstelle angeschlossen, am Funkgerät verwendet man die Anschlüsse Mikrofon, <br>
-                Lautsprecher und PTT.     
-            </p>
+            <div class="w-50">
+                <h2>Paket Radio auf CB-Funk</h2>
+                <p>
+                    Über Funk kann man von einem Computer aus gebührenfrei Daten mit anderen CB-Funkern austauschen.
+                </p>
+                <p>
+                    Die CB-Kanäle 6, 7, 24, 25, 52, 53, 76, 77 sind für die Datenfunk freigegeben.
+                    Datenfunk auf diesen Kanälen darf betrieben werden in den Betriebsarten F1D, F2D und G2D 
+                    (Frequenz- und Phasenmodulation, FSK bzw. AFSK).
+                    Es dürfen jedoch nur Geräte verwendet werden, die für den Anschluss beliebiger Zusatzmikrofone zugelassen sind.
+                </p>
+                <p>
+                    Im Amateurfunk hat die digitale Datenübertragung schon vor einigen Jahren eine technische Revolution ausgelöst.
+                    Packet-Radio wurde 1981 in Tucson Arizona erstmals vorgestellt. Eine Gruppe von Funkamateuren hatte ein Verfahren 
+                    entwickelt, mit dem man auf einfache Art Daten per Funk übertragen kann.
+                    Es wurden Verfahren und Geräte entwickelt, die speziell für die Funk-Datenübertragung geeignet sind und mit sehr 
+                    geringem Aufwand an jedes Funkgerät angeschlossen werden können. Es hat sich gezeigt, dass das international weit 
+                    verbreitete Packet-Radio für diese Zwecke optimal eingesetzt werden kann.
+                </p>
+                <p>
+                    Im CB-Funk hat sich Packet-Radio mit 1200 Baud als optimal erwiesen , das entspricht ca. 150 Zeichen pro Sekunde. 
+                    Es gibt inzwischen viele Stationen, die über Packet-Radio erreichbar sind. Außerdem kann man in vielen Digipeatern 
+                    und Mailboxen interessante Nachrichten auslesen und auch Nachrichten an andere Funkfreunde speichern.
+                </p>
+                <p>
+                    Sicherlich, mit Computer und Packet-Radio zu arbeiten ist nicht so einfach, wie nur die Sprechtaste eines Mikrofons 
+                    zu drücken.
+                    Wollen Sie wissen, was man mit Packet-Radio alles machen kann?
+                    Dann probieren Sie einmal Packet-Radio aus! Sie werden sehen, dass die Möglichkeiten fast unerschöpflich sind.
+                </p>
+                <p>
+                    Wenn Sie weitere Fragen haben, dann stehen wir gerne zu Ihrer Verfügung. Sollten Sie sich für Packet-Radio-Controller 
+                    oder Modems interessieren, dann schauen Sie doch mal in unseren Shop um. Hier finden Sie auch ein komplettes 
+                    Zubehörprogramm. 
+                </p>
+                <p>
+                    <strong>
+                        Was ist Packet-Radio?
+                    </strong>
+                </p>
+                <p>
+                    Packet-Radio ist ein Verfahren, mit dem man über Funk Daten senden und empfangen kann. Die Daten werden meist über 
+                    einen Computer eingegeben, der Packet-Radio-Controller erzeugt daraus Töne, die per Funk übertragen werden können. 
+                    Der Packet-Radio-Controller der Gegenstation empfängt diese Töne und wandelt sie wieder in computerlesbare Daten um. 
+                    Die Daten werden dabei nicht kontinuierlich gesendet, sondern zu Paketen zusammengefasst, daher der Name Packet-Radio.
+                </p>
+                <p>
+                    <strong>
+                        Viele Stationen arbeiten auf dem selben Kanal
+                    </strong>
+                </p>
+                <p>
+                    Mit jedem Datenpaket wird (ausser den eigentlichen Nutzdaten) noch das Rufzeichen des Absenders und des Empfängers 
+                    übertragen. Dadurch ist es möglich, dass mehrere Packet-Radio Verbindungen auf derselben Frequenz stattfinden ohne sich 
+                    zu stören: Jeder Empfänger sucht sich aus der Vielzahl der mitgehörten Pakete nur diejenigen heraus, die für ihn bestimmt 
+                    sind. Jeder Sender prüft, bevor er sendet, ob die Frequenz frei ist. Dadurch werden Kollisionen vermieden und die Frequenz 
+                    kann für viele Benutzer gleichzeitig genutzt werden.
+                </p>
+                <p>
+                    <strong>
+                        Übertragungsfehler ausgeschlossen
+                    </strong>
+                </p>
+                <p>
+                    In den Datenpaketen sind Prüfsummen enthalten, die es ermöglichen, Übertragungsfehler zu erkennen. 
+                    Nur 100% fehlerfreie Pakete werden vom Empfänger akzeptiert und auf dem Bildschirm angezeigt. 
+                    Richtig empfangene Pakete werden bestätigt. Unbestätigte Pakete werden so lange wiederholt, bis sie 
+                    fehlerfrei beim Empfänger angekommen sind.
+                </p>
+                <p>
+                    <strong>
+                        Große Reichweite durch Digipeater
+                    </strong>
+                </p>
+                <p>
+                    Der Packet-Radio-Verkehr kann direkt zwischen zwei Funkpartnern stattfinden. Zusätzlich können die Datenpakete 
+                    jedoch auch über mehrere Zwischenstationen ("Digipeater") weitergereicht werden, was die Reichweite erheblich vergrößert. 
+                    Beim klassischen 'digipeating' kann ein Datenpaket über bis zu 7 Zwischenstationen weitergereicht werden bis es beim 
+                    Empfänger ankommt.
+                </p>
+                <p>
+                    <strong>
+                        Das Packet-Radio-Netz
+                    </strong>
+                </p>
+                <p>
+                    Was im Amateurfunk schon lange gebräuchlich ist wird nun Schritt für Schritt auch im CB-Funk verwirklicht:  
+                    Die Packet-Radio-Knoten (Digipeater) werden vernetzt, durch intelligente Netzwerksoftware baut sich automatisch  
+                    ein leistungsfähiges Datennetz auf, das von Jedermann benutzt werden kann.
+                </p>
+                <p>
+                    <strong>
+                        Verbreiteter Standard
+                    </strong>
+                </p>
+                <p>
+                    Packet-Radio wird seit fast 20 Jahren im Amateurfunk weltweit verwendet und hat sich tausendfach bewährt.
+                </p>
+                <p>
+                    <strong>
+                        Einfacher Anschluss
+                    </strong>
+                </p>
+                <p>
+                    Der Anschluss eines Packet-Controllers an das CB-Funkgerät erfolgt ohne Eingriff in das Gerät über die Mikrofon- und Lautsprecherbuchse. 
+                    Nur 4 Leitungen sind nötig: Masse, Mikrofon, Lautsprecher und Sprechtaste.
+                </p>
+                <p>
+                    <strong>
+                        Packet-Radio Modulation
+                    </strong>
+                </p>
+                <p>
+                    Für FM-Funkgeräte ist die <strong>AFSK-Modulation</strong> (Audio Frequency Shift Keying) gebräuchlich. Ein NF-Ton wird in der Frequenz 
+                    umgetastet und mit einem normalen FM-Funkgerät übertragen. Man verwendet die Bell 202 Norm mit den Tonfrequenzen 
+                    1200 und 2200 Hz. Vorteil: einfachster Anschluss an der Mikrofon- und Lautsprecherbuchse. Fast jedes FM-CB-Funkgerät 
+                    ist geeignet, es sind keine Eingriffe ins Funkgerät notwendig. Es genügt, wenn man sich ein passendes Verbindungskabel 
+                    zwischen dem Mikrofonanschluss des Funkgeräts und dem Packet-Radio-Controller anfertigt, das mit den Signalen <strong>Mikrofon, 
+                    Lautsprecher, PTT, Masse</strong> belegt ist. 
+                </p>
+                <h2>Was braucht man für Packet-Radio</h2>
+                <p>
+                    <strong>
+                        Funkgerät
+                    </strong>
+                </p>
+                <p>
+                    Für den 1200 Baud Betrieb eignet sich fast jedes FM-CB-Funkgerät. Der Packet-Radio-Controller wird an die 
+                    Mikrofon- und Lautsprecherbuchse angeschlossen. Geräte, bei denen das Mikrophon fest angeschlossen ist,  
+                    oder bei denen ein eingebautes Mikrofon verwendet wird (Handfunkgeräte ohne Anschluss für externe Mikrofone)  
+                    sind nicht zulässig. 
+                </p>
+                <p>
+                    <strong>
+                        Coumputer
+                    </strong>
+                </p>
+                <p>
+                    Packet-Radio-Modems können mit jedem Computer betrieben werden, der eine serielle Schnittstelle (RS232, V24) besitzt. 
+                    Ideal sin IBM-kompatible (PC, AT, 386, 486 etc.), Laptops, Notebooks etc.. Genau so gut lässt sich ein Atari-ST 
+                    oder Amiga anschließen. Für alle diese Rechner sind Terminalprogramme verfügbar, mit denen man sehr komfortabel 
+                    Daten senden und empfangen kann.
+                </p>
+                <p>
+                    <strong>
+                        Packet-Radio-Controller
+                    </strong>
+                </p>
+                <p>
+                    Der Packet-Radio-Controller kontrolliert den korrekten Aufbau der Datenpakete und analysiert die empfangenen Pakete. 
+                    Er wird über die serielle Schnittstelle angeschlossen, am Funkgerät verwendet man die Anschlüsse Mikrofon, 
+                    Lautsprecher und PTT.     
+                </p>
+            </div>    
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
