--- a/neue-mitglieder.html
+++ b/neue-mitglieder.html
@@ -24,19 +24,24 @@
         <img src="./assets/img/kodax-02.gif" alt="">
     </div>
 
-    <div class="d-flex justify-around align-center margin-top-30px margin-bottom-30px">
-        <div  class="welcome-text txt-center">
+    <div class="d-flex justify-center align-center margin-top-30px margin-bottom-30px">
+        <div  class="welcome-text txt-center w-50">
             <h2>Seit Bekannt ist das es CharlyTango wieder gibt.<br> 
                 Sind folgende Mitglieder NEU dazu gekommen!</h2>
-            <table id="memberList" class="txt-center">
-                <tr>
-                    <th>Datum</th>
-                    <th>MemberCode</th>
-                    <th>Name</th>
-                    <th>Locator</th>
-                    <th>Wohnort</th>
-                </tr>
-            </table>    
+            <div class="d-flex justify-center">    
+                <table class="txt-center">
+                    <thead>    
+                        <tr>
+                            <th>Datum</th>
+                            <th>MemberCode</th>
+                            <th>Name</th>
+                            <th>Locator</th>
+                            <th>Wohnort</th>
+                        </tr>
+                    </thead>
+                    <tbody id="memberList"></tbody>    
+                </table>
+            </div>        
         </div>
     </div>
 
